# wetterstation

./: .gitmodules  CMakeLists.txt  MQTTInfluxDBBridge.py  MQTT_Prometheus_Bridge.py  MQTTtoWeathercloud.py  Makefile  README.md  create_weather_rrd.s  lora.cpp  lora.h  main.cpp  main.h  mqtt_rrd_receiver.py  sdkconfig  sdkconfig.mqtt  sdkconfig.old  show_last_out.py  simweather.py  status.h  wetterstation.py
components/cbor/: open_memstream.c
components/lora/: lora.c  lora.cpp
docs/: weather_station_logger_120313.ino
esp/: sdkconfig
esp/Hauptwetterstation/: .gitignore  CMakeLists.txt  README.md  sdkconfig
esp/Hauptwetterstation/main/: CMakeLists.txt  hauptwetterstation.cpp  hauptwetterstation.h  idf_component.yml
esp/common/: tools.h  (+1 more)
esp/shared/sensors/: CMakeLists.txt  SensorTypes.h  ads1015.cpp  bmp280.cpp  bmp390.cpp  bmp390.h  ds3231.cpp  ds3231.h  sht35.cpp  sht35.h  sht40.cpp
esp/shared/sensors/ulp/: tools.h  ulp_ads1015.h  ulp_i2c_bitbang.h  ulp_main.c  ulp_sht40.c  ulp_sht40.h
main/: CMakeLists.txt  bmp280.cpp  bmp280.h  cbor_tools.cpp  cbor_tools.h  esp32_digital_led_lib.cpp  esp32_digital_led_lib.h  sht35.cpp  sht35.h  tools.cpp  tools.h  veml7700.cpp  veml7700.h  wetterstation-lora.cpp  wetterstation-lora.h  wetterstation.cpp  wetterstation.h
raspi/: .gitignore  LoRaToMQTT.py  LoraToMQTT.cpp  MQTTInfluxDBBridge.py  MQTTNeelixBridge.py  MQTT_Prometheus_Bridge.py  MQTTtoWeathercloud.py  SConstruct  ShowMQTTData.py  create_temp_graph.py  lora.cpp  lora.h  main.cpp  weathercloud.py  wetterstation.py
shared/: lorastructs.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
(+95 files in other folders)
